# near-wallet-chooser

./: .gitignore  README.md
contract/: .gitignore  Cargo.toml  build.sh  readme.md
contract/src/: lib.rs
demo/frontend/: package.json
demo/frontend/src/: config.js  index.js  utils.js
frontend/: .env  package.json  readme.md  vue.config.js
frontend/public/: index.html
frontend/public/js/: cdn.js
frontend/src/: App.vue  index.html  main.js
frontend/src/assets/css/: base.css  index-mobile.less
frontend/src/router/: index.js
frontend/src/utils/: config.js  index.js  rem.js  utils.js
frontend/src/views/: Index.vue
